# RemCCG

./: CMakeLists.txt  README.md  reported-bugs.md
lib/: CMakeLists.txt
lib/ccg/: block.c  constant.c  expression.c  func.c  integer.c  label.c  pointer.c  statement.c  types.h  variable.c
src/: c_proto.proto  proto_to_c.h  remccg.cc  test_driver_main.cc  util.cc  util.h
